plang/testing/logs/false-incorrect/5/program5.p.p
ylX8 (pOoE) (cxtsV) :- eeax.

vu :- il1 (qYw DuF k72T (V)) yE LpJh, m4s70 (V8) n9Q; (noQeU fP), i j4dL xWcJ (g CDys (l8R (n (sbEUB gw2mR)) (RX) NpQQ) Y29 Yq7), (id uw9Qw (sQdjK POK (p j (dK) (T)) G)); bvmd (YM) Lui AAh; t6zZ (tRJn (t3H TOz (j (UMuU1) J7) (eSf gB M (wNG (lElt SGOlm) (phPbc t))) Wg) xall); (hiEbX (z Fhu YA u) (TqS) wkkGm).
? (((ssFZ4 (Hn) (NdvEm) Z3))).
